--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -3,7 +3,7 @@
 </div>
 <div ng-controller="DashboardController as dashboard" class="container-fluid">
 
-   <div class="row text-center text-muted m0">
+   <div class="row text-center text-muted m0" ng-hide="app.displayHistory">
     	<div class="col-xs-12 col-md-2 col-md-offset-3">
             <div class="panel panel-default">
                 <div ripple ng-click="employerSelected = true;" class="bb br" ng-class="{'bg-primary': employerSelected, 'pv-sm': app.isLoggedIn, 'pv-xxl': !app.isLoggedIn}" >
@@ -29,31 +29,55 @@
             </div>
         </div>
     </div>
+    <!-- <br> -->
+	<div class="row" ng-show="app.displayHistory">
+		<div class="col-xs-12 col-md-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<div class="col-xs-6">
+						Historial de Certificaci&oacute;n de Deudas
+					</div>
+					<div class="col-xs-6 pull-right">
+						<button type="button" name="button" ripple class="mr mb-sm btn btn-default">Pedir uno Nuevo</button>
+					</div>
+				</div>
+				<div class="panel-body">
+					<div class="table-responsive">
+						<table class="table table-striped table-bordered table-hover">
+							<thead>
+								<tr>
+									<th>
 
-    <br>
+									</th>
+									<th>
 
-    <div class="row" style="margin-top: 15px;" ng-show="employerSelected">
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+										Something
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+    <!-- <div class="row" style="margin-top: 15px;" ng-show="employerSelected">
     	<div class="col-md-6 col-md-offset-3" ng-hide="app.displayCreateNewCasePanels">
     		<abn-tree tree-data="transactions" expand-level='0'></abn-tree>
 			<abn-tree tree-data="createNewCase"></abn-tree>
     	</div>
     </div>
 
-	<br>
-	<!-- <div class="row">
-		<div class="col-md-12">
-			<div class="panel panel-default">
-				<div class="panel-body">
-					<div ng-init="activeStep=1" class="wizard">
-						<ul class="steps-bar">
-							<li class="active"><span>Step 1</span></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<div class="row" style="margin-top: 15px;" ng-show="app.displayCreateNewCasePanels">
+	<br> -->
+
+	<!-- <div class="row" style="margin-top: 15px;" ng-show="app.displayCreateNewCasePanels">
 		<div class="col-md-10 col-md-offset-1">
 			<form class="" action="index.html" method="post">
 				<uib-accordion close-others="false">
@@ -207,5 +231,5 @@
 				</div>
 			</form>
 		</div>
-	</div>
+	</div> -->
 </div>
