--- a/app/views/templates/sidebar.html
+++ b/app/views/templates/sidebar.html
@@ -4,8 +4,14 @@
       <div class="sidebar-nav">
          <ul class="nav">
             <!-- Iterates over all sidebar items-->
-            <li class="nav-heading">
+            <!-- <li class="nav-heading">
                <span class="text-muted">Navegaci&oacute;n</span>
+            </li> -->
+            <li ng-click="app.sidebar.isMini = !app.sidebar.isMini">
+               <a ui-sref="app.dashboard" href="" title="Layouts" ripple="">
+                  <em class="sidebar-item-icon fa fa-bars"></em>
+                  <span>Esconder Men&uacute;</span>
+               </a>
             </li>
             <li ng-class="{active:$state.includes('dashboard')}">
                <a ui-sref="app.dashboard" href="" title="Layouts" ripple="">
@@ -20,7 +26,7 @@
                   <span>Patronos</span>
                </a>
                <ul class="nav sidebar-subnav">
-                  <li ui-sref-active="active">
+                  <li ui-sref-active="active" ng-click="app.displayHistory = true">
                      <a title="Default" ripple="">
                         <em class="sidebar-item-icon"></em>
                         <span>Certificaci&oacute;n de Deuda</span>
