--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -31,40 +31,13 @@
     </div>
     <!-- <br> -->
 	<div class="row" ng-show="app.displayHistory">
-		<div class="col-xs-12 col-md-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<div class="col-xs-6">
-						Historial de Certificaci&oacute;n de Deudas
-					</div>
-					<div class="col-xs-6 pull-right">
-						<button type="button" name="button" ripple class="mr mb-sm btn btn-default">Pedir uno Nuevo</button>
-					</div>
-				</div>
-				<div class="panel-body">
-					<div class="table-responsive">
-						<table class="table table-striped table-bordered table-hover">
-							<thead>
-								<tr>
-									<th>
-
-									</th>
-									<th>
-
-									</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>
-										Something
-									</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-				</div>
-			</div>
+		<div class="app-view-header text-center">
+			Historial de Certificados de Deuda Solicitados
+		</div>
+	</div>
+	<div class="row">
+		<div class="">
+			<!-- Todo  Add poliza and panels and create wizard for this transaction-->
 		</div>
 	</div>
 
