fixed spaced on history

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -46,8 +46,9 @@
 				</button>
 			</div>
 		</div>
+		<br>
 		<div class="row">
-			<div class="col-xs-11 col-md-offset-1">
+			<div class="col-xs-11 col-md-10 col-md-offset-1">
 				<div class="panel panel-default" ng-repeat="poliza in dashboard.polizas track by poliza.id">
 					<div class="panel-heading">
 						<div class="panel-title" ng-click="poliza.isCollapsed = !poliza.isCollapsed" style="cursor:pointer;">
