--- a/app/views/templates/sidebar.html
+++ b/app/views/templates/sidebar.html
@@ -10,7 +10,7 @@
             <li ng-click="app.sidebar.isMini = !app.sidebar.isMini">
                <a ui-sref="app.dashboard" href="" title="Layouts" ripple="">
                   <em class="sidebar-item-icon fa fa-bars"></em>
-                  <span>Esconder Men&uacute;</span>
+                  <!-- <span>Esconder Men&uacute;</span> -->
                </a>
             </li>
             <li ng-class="{active:$state.includes('dashboard')}">
