--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -2,7 +2,7 @@
 	Portal de Transacciones
 </div>
 <div ng-controller="DashboardController as dashboard" class="container-fluid">
-   
+
    <div class="row text-center text-muted m0">
     	<div class="col-xs-12 col-md-2 col-md-offset-3">
             <div class="panel panel-default">
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-2">
-            <div class="panel panel-default">
+            <div class="panel panel-default" style="cursor:pointer;">
                 <div class="bb-lg br pv-xxl">
                     <em class="fa fa-medkit fa-2x mv"></em>
                     <p>Proveedores</p>
@@ -21,13 +21,13 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-2">
-            <div class="panel panel-default">
+            <div class="panel panel-default" style="cursor:pointer;">
                 <div class="bb-lg br pv-xxl">
                     <em class="fa fa-bed fa-2x mv"></em>
                     <p>Lesionados</p>
                 </div>
             </div>
-        </div>	
+        </div>
     </div>
 
     <br>
