--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,7 +3,7 @@
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Inicio de sesi&oacute;n)
+                    Inicio de sesi&oacute;n
                 </div>
                 <div class="panel-body">
                     <form role="form" class="mb-lg ng-pristine ng-valid">
@@ -14,6 +14,7 @@
                         <div class="form-group">
                             <label class="control-label"><i class="fa fa-lock" style="margin-right: 5px;"></i>Contrase&ntilde;a</label>
                             <input type="password" placeholder="Contrase&ntilde;a" class="form-control" />
+							<small style="font-size:12px;"><a href="">Olvide mi contrase&ntilde;a?</a></small>
                         </div>
                         <button type="button" class="btn btn-default">Creaci&oacute;n de usuarios</button>
                         <button type="submit" class="btn btn-default" ng-click="app.sidebar.isOffscreen = false; app.isLoggedIn = true;" ui-sref="app.dashboard" style="float: right;">Iniciar sesi&oacute;n</button>
