creacion de caso nuevo addded with wizard

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -5322,7 +5322,7 @@ a.text-gray-lighter:focus {
 }
 
 .steps-bar > li.active:after, .steps-bar > li.active:before {
-	background-color: #3f51b5;
+	background-color: #cd7c5e;
 	color: #fff;
 }
 
