--- a/app/views/templates/sidebar.html
+++ b/app/views/templates/sidebar.html
@@ -57,7 +57,7 @@
                      </a>
                   </li>
                   <li ui-sref-active="active">
-                     <a title="Full Height" ripple="">
+                     <a title="Full Height" ripple="" ui-sref="app.transactions">
                         <em class="sidebar-item-icon"></em>
                         <span>Creaci&oacute;n de Caso Nuevo</span>
                      </a>
