--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -176,9 +176,10 @@
 							<div ng-show="activeStep == 4" class="">
 								<h4>Descargar Certificado de Deuda</h4>
 								<div class="row">
+									<br>
 									<div class="col-xs-12 col-md-4 col-md-offset-4">
 										<form class="mb-lg" action="index.html" method="post">
-											<button type="button" name="button" class="btn btn-default">Descargar Certificado</button>
+											<button type="button" name="button" class="btn btn-primary btn-block" style="background-color:#cd7c5e; border-color:#cd7c5e; color:#fff !important;">Descargar Certificado</button>
 										</form>
 									</div>
 								</div>
