now is more responsive

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-11 col-md-offset-1">
-				<button type="button" ripple class="mr mb-sm btn btn-default" name="button" ng-click="dashboard.goToWizard = true">
+				<button type="button" ripple class="mr mb-sm btn btn-default" name="button" ng-click="dashboard.goToWizard = true;">
 					Pedir Certificado Nuevo
 					<span class="ripple">
 						<span class="angular-ripple" style="width:89px; height:89px; left: -0.328125px; top: -35.5px;"></span>
@@ -185,7 +185,7 @@
 								</div>
 								<div class="row">
 									<div class="mt pull-right">
-										<button type="button" ripple class="mr mb-sm btn btn-default" name="button" ng-click="dashboard.goToWizard = false; activeStep = 1">
+										<button type="button" ripple class="mr mb-sm btn btn-default" name="button" ng-click="dashboard.goToWizard = false; activeStep = 1;">
 											Finalizar
 											<span class="ripple">
 												<span class="angular-ripple" style="width:89px; height:89px; left: -0.328125px; top: -35.5px;"></span>
