--- a/app/views/templates/sidebar.html
+++ b/app/views/templates/sidebar.html
@@ -7,13 +7,13 @@
             <!-- <li class="nav-heading">
                <span class="text-muted">Navegaci&oacute;n</span>
             </li> -->
-            <li ng-click="app.sidebar.isMini = !app.sidebar.isMini">
+            <li ng-click="app.sidebar.isMini = !app.sidebar.isMini" class="hidden-xs">
                <a ui-sref="app.dashboard" href="" title="Layouts" ripple="">
                   <em class="sidebar-item-icon fa fa-bars"></em>
                   <!-- <span>Esconder Men&uacute;</span> -->
                </a>
             </li>
-            <li ng-class="{active:$state.includes('dashboard')}">
+            <li ng-class="{active:$state.includes('dashboard')}" ng-click="app.displayHistory = !app.displayHistory; dashboard.goToWizard = false;">
                <a ui-sref="app.dashboard" href="" title="Layouts" ripple="">
                   <em class="sidebar-item-icon fa fa-home"></em>
                   <span>Inicio</span>
