--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,8 +16,14 @@
                             <input type="password" placeholder="Contrase&ntilde;a" class="form-control" />
 							<small style="font-size:12px;"><a href="">Olvide mi contrase&ntilde;a?</a></small>
                         </div>
-                        <button type="button" class="btn btn-default">Creaci&oacute;n de usuarios</button>
-                        <button type="submit" class="btn btn-default" ng-click="app.sidebar.isOffscreen = false; app.isLoggedIn = true;" ui-sref="app.dashboard" style="float: right;">Iniciar sesi&oacute;n</button>
+						<div class="row">
+							<div class="col-xs-12 col-sm-12 col-md-6">
+								<button type="button" class="btn btn-default btn-block">Creaci&oacute;n de usuarios</button><br class="visible-xs visible-sm">
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-6 pull-right">
+								<button type="submit" class="btn btn-default btn-block" ng-click="app.sidebar.isOffscreen = false; app.isLoggedIn = true;" ui-sref="app.dashboard">Iniciar sesi&oacute;n</button>
+							</div>
+						</div>
                     </form>
                 </div>
             </div>
