added hover text on landiing page

--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -5,7 +5,7 @@
 
    <div class="row text-center text-muted m0">
     	<div class="col-xs-12 col-md-2 col-md-offset-3">
-            <div class="panel panel-default">
+            <div class="panel panel-default" title="Registrese como Patrono">
                 <div ripple ui-sref="app.login" ng-class="{'bg-primary': $root.employerSelected}" class="bb br pv-xxl">
                     <em class="fa fa-user fa-2x mv"></em>
                     <p>Patronos</p>
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-2">
-            <div class="panel panel-default" style="cursor:pointer;">
+            <div class="panel panel-default" style="cursor:pointer;" title="Registrese como Proveedor">
                 <div class="bb-lg br pv-xxl">
                     <em class="fa fa-medkit fa-2x mv"></em>
                     <p>Proveedores</p>
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="col-xs-12 col-md-2">
-            <div class="panel panel-default" style="cursor:pointer;">
+            <div class="panel panel-default" style="cursor:pointer;" title="Registrese como Lesionado">
                 <div class="bb-lg br pv-xxl">
                     <em class="fa fa-bed fa-2x mv"></em>
                     <p>Lesionados</p>
