Added links to login for user creation and fixed drpdowns on wizard

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -14,14 +14,27 @@
                         <div class="form-group">
                             <label class="control-label"><i class="fa fa-lock" style="margin-right: 5px;"></i>Contrase&ntilde;a</label>
                             <input type="password" placeholder="Contrase&ntilde;a" class="form-control" />
-							<small style="font-size:12px;"><a href="">Olvide mi contrase&ntilde;a?</a></small>
+							<div class="row">
+								<div class="col-xs-6">
+									<small style="font-size:12px;"><a href="">Olvide mi contrase&ntilde;a?</a></small>
+								</div>
+								<div class="col-xs-6 pull-right">
+									<small style="font-size:12px;" class="pull-right">
+										<a href="">
+											Creaci&oacute;n de usuarios
+										</a>
+									</small>
+								</div>
+							</div>
+
                         </div>
 						<div class="row">
 							<div class="col-xs-12 col-sm-12 col-md-6">
-								<button type="button" class="btn btn-default btn-block">Creaci&oacute;n de usuarios</button><br class="visible-xs visible-sm">
+								<button type="submit" class="btn btn-default btn-block" ng-click="app.sidebar.isOffscreen = false; app.isLoggedIn = true;" ui-sref="app.dashboard">Iniciar sesi&oacute;n</button>
+								<br class="visible-xs visible-sm">
 							</div>
 							<div class="col-xs-12 col-sm-12 col-md-6 pull-right">
-								<button type="submit" class="btn btn-default btn-block" ng-click="app.sidebar.isOffscreen = false; app.isLoggedIn = true;" ui-sref="app.dashboard">Iniciar sesi&oacute;n</button>
+								<button type="button" class="btn btn-default btn-block">Regresar</button>
 							</div>
 						</div>
                     </form>
