added language option

--- a/app/views/templates/top-navbar.html
+++ b/app/views/templates/top-navbar.html
@@ -36,7 +36,8 @@
             <!-- END Left navbar-->
             <div style="margin-top: 10px;">
                <div class="nav navbar-nav navbar-right" style="margin-right: 15px;">
-                  <a ui-sref="app.login" style="display: inline-block; height: 43px;">
+				   <a href="" ng-click="changeLang();" style="margin-right: 10px;">{{app.lang}}</a>
+                  <a ui-sref="app.login" style="display: inline-block; height: 43px;padding-left: 5px; border-left:#fff solid;">
                      <i class="icon fa fa-sign-in" style="font-size: 30px; color: white; top: 5px; position: relative;"></i>
 					 <span style="font-size: 20px; color: white;">{{sessionText}}</span>
                   </a>
