cambio de fecha por year en wizard

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -136,7 +136,7 @@
 									<span>Poliza</span>
 								</li>
 								<li ng-class="{'active':activeStep >= 3}">
-									<span>Fecha</span>
+									<span>A&ntilde;o</span>
 								</li>
 								<li ng-class="{'active':activeStep >= 4}">
 									<span>Certificado</span>
