--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -193,12 +193,12 @@
 								</div>
 							</div>
 							<div ng-show="activeStep == 3" class="">
-								<h4>Seleccione Fecha</h4>
+								<h4>Seleccione A&ntilde;o</h4>
 								<div class="row">
 									<div class="col-xs-12 col-md-4 col-md-offset-4">
 										<form class="mb-lg" action="index.html" method="post">
 											<div class="form-group">
-												<label for="" class="control-label">Fecha: </label>
+												<label for="" class="control-label">A&ntilde;o: </label>
 												<select class="form-control" name="" >
 													<option value="">2016</option>
 													<option value="">2015</option>
@@ -228,7 +228,7 @@
 									<br>
 									<div class="col-xs-12 col-md-4 col-md-offset-4">
 										<form class="mb-lg" action="index.html" method="post">
-											<button type="button" name="button" class="btn btn-primary btn-block" style="background-color:#cd7c5e; border-color:#cd7c5e; color:#fff !important;">Descargar Certificado</button>
+											<button type="button" name="button" class="btn btn-primary btn-block" style="background-color:#cd7c5e; border-color:#cd7c5e; color:#fff !important;" ng-click="dashboard.download()">Descargar Certificado</button>
 										</form>
 									</div>
 								</div>
